[tool.poetry]
name = "emecutete"
version = "0.1.0"
description = ""
authors = ["Cristóbal Contreras Rubio <crisconru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
